--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi voluptatum et natus doloribus, vero rem maiores voluptatem distinctio totam modi mollitia. Provident error fugiat excepturi voluptatum consequatur neque quibusdam nemo!
+    </p>
 </body>
 </html>
