--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travelgram | Perfil de Viagem</title>
     <link rel="stylesheet" href="styles/index.css">
+    
+
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi voluptatum et natus doloribus, vero rem maiores voluptatem distinctio totam modi mollitia. Provident error fugiat excepturi voluptatum consequatur neque quibusdam nemo!
