--- a/index.html
+++ b/index.html
@@ -13,7 +13,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi voluptatum et natus doloribus, vero rem maiores voluptatem distinctio totam modi mollitia. Provident error fugiat excepturi voluptatum consequatur neque quibusdam nemo!
-    </p>
+    <nav>
+        <a href="#" id="logo">
+            <img src="./assets/Logo.svg" alt="Travelgram Logo">
+        </a>
+
+        <ul id="primary-menu">
+            <li>
+                <a href="#"><img src="./assets/icons/MagnifyingGlass.png" alt="search icon"></a>
+            </li>
+            <li><a href="#">Explorer</a></li>
+            <li><a href="#"></a>Minhas Viagens</li>
+            <li><a href="#">
+                <img src="./assets/Profile pic.png" alt="Renan Santos Portrait">
+            </a></li>
+        </ul>
+    </nav>
+    <header>    
+    </header>
 </body>
 </html>
