--- a/index.html
+++ b/index.html
@@ -13,23 +13,60 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <a href="#" id="logo">
-            <img src="./assets/Logo.svg" alt="Travelgram Logo">
-        </a>
+    <div class="bg-surface-color">
+        <nav class="container">
+            <a href="#" id="logo"><img src="./assets/Logo.svg" alt="Travelgram Logo"> </a>
 
-        <ul id="primary-menu">
-            <li>
-                <a href="#"><img src="./assets/icons/MagnifyingGlass.png" alt="search icon"></a>
-            </li>
-            <li><a href="#">Explorer</a></li>
-            <li><a href="#"></a>Minhas Viagens</li>
-            <li><a href="#">
-                <img src="./assets/Profile pic.png" alt="Renan Santos Portrait">
-            </a></li>
-        </ul>
-    </nav>
-    <header>    
-    </header>
+            <ul id="primary-menu">
+                <li><a href="#"><img src="./assets/icons/MagnifyingGlass.png" alt="search icon"></a></li>
+                <li><a href="#">Explorar</a></li>
+                <li><a href="#">Minhas Viagens</a></li>
+                <li><a href="#"><img src="./assets/Profile pic.png" alt="Renan Santos Portrait"></a></li>
+            </ul>
+        </nav>
+    
+        <header>   
+            <div class="container">
+                <div id="profile">
+                    <img src="./assets/Profile pic.png" alt="Renan Santos Profile Image">
+                    <div>
+                        <h1>Renan Santos</h1>
+                        <p>
+                            Amante de viagens, cultura e gastronomia. 🌍✈️<br>  
+                            Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸 
+                        </p>
+                    </div>
+                </div>
+                <ul id="info">
+                    <li>
+                        <img src="./assets/icons/MapPin.png" alt="map pin icon">
+                        <span>Taubate-SP, Brasil</span>
+                    </li>
+                    <li>
+                        <img src="./assets/icons/AirplaneTilt.png" alt="airplane icon">
+                        <span>5 paises</span>
+                    </li>
+                    <li>
+                        <img src="./assets/icons/Image.png" alt="image icon">
+                        <span>240 fotos</span>
+                    </li>
+                </ul>
+            </div> 
+        </header>
+    </div>
+    <main class="container">
+        <img src="./assets/images/Card photo01.png" alt="">
+        <img src="./assets/images/card photo02.png" alt="">
+        <img src="./assets/images/Card photo.jpg" alt="">
+        <img src="./assets/images/Card photo-1.jpg" alt="">
+        <img src="./assets/images/Card photo-2.jpg" alt="">
+        <img src="./assets/images/Card photo-3.jpg" alt="">
+        <img src="./assets/images/Card photo-4.jpg" alt="">
+        <img src="./assets/images/Card photo-5.jpg" alt="">
+        <img src="./assets/images/Card photo-6.jpg" alt="">
+        <img src="./assets/images/Card photo-7.jpg" alt="">
+        <img src="./assets/images/Card photo-8.jpg" alt="">
+        <img src="./assets/images/Card photo-9.jpg" alt="">
+    </main>
 </body>
 </html>
