--- a/index.html
+++ b/index.html
@@ -68,5 +68,18 @@
         <img src="./assets/images/Card photo-8.jpg" alt="">
         <img src="./assets/images/Card photo-9.jpg" alt="">
     </main>
+    
+    <footer class="container">
+        <span>
+            Travelgram &copy; 2024
+        </span>
+
+        <span>
+            Termos de uso
+        </span>
+        <span>
+            Política de privacidade
+        </span>
+    </footer>
 </body>
 </html>
